libs/glibc: version 2.21, SECURITY_PATCH++

--- a/libs/glibc/HISTORY
+++ b/libs/glibc/HISTORY
@@ -1,3 +1,7 @@
+2015-02-06 Pavel Vinogradov <public@sourcemage.org>
+	* DETAILS: version 2.21, SECURITY_PATCH++, (CVE-2015-1472),
+	  (CVE-2014-7817). (CVE-2012-3406). (CVE-2014-9402)
+
 2014-12-10 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: version 2.20, SECURITY_PATCH++ (CVE-2014-4043)
 	* BUILD: NPTL is no longer an addon, disable -Ofast too in CFLAGS
