doc/evince: version 3.15.4

--- a/doc/evince/HISTORY
+++ b/doc/evince/HISTORY
@@ -1,3 +1,6 @@
+2015-02-06 Pavel Vinogradov <public@sourcemage.org>
+	* DETAILS: updated spell to 3.15.4
+
 2014-10-18 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: updated to 3.14.1, simplified branch substraction
 	  in SOURCE_URL, evince was replaced with $SPELL also
