--- a/x11-libs/wine/HISTORY
+++ b/x11-libs/wine/HISTORY
@@ -1,3 +1,6 @@
+2015-02-07 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.7.36 (devel)
+
 2014-12-03 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated 1.7.32 (devel)
 	* PREPARE, sc2-login.diff: Removed, no longer applies cleanly and fails to
