--- a/graphics-libs/mesalib/HISTORY
+++ b/graphics-libs/mesalib/HISTORY
@@ -1,3 +1,7 @@
+2015-02-07 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 10.4.4
+	* DEPENDS: tweak wayland support
+
 2015-01-13 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 10.4.2
 
