--- a/xorg-lib/libinput/HISTORY
+++ b/xorg-lib/libinput/HISTORY
@@ -1,3 +1,6 @@
+2015-02-07 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.10.0
+
 2015-02-03 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.9.0
 	* DEPENDS: add UDEV, doxygen, gtk+3, glib, cairo
