--- a/audio-soft/easytag/HISTORY
+++ b/audio-soft/easytag/HISTORY
@@ -1,3 +1,6 @@
+2015-02-07 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.2.6
+
 2014-11-26 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.2.5
 
