--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,3 +1,7 @@
+2015-02-07 Ladislav Hagara <hgr@vabo.cz>
+	* latest.defaults: LATEST_maintenance_patches_3=patch-3.18.6
+	* info/patches/maintenance_patches_3/patch-3.18.6: added
+
 2015-01-30 Ladislav Hagara <hgr@vabo.cz>
 	* latest.defaults: LATEST_maintenance_patches_3=patch-3.18.5
 	* info/patches/maintenance_patches_3/patch-3.18.5: added
