--- a/windowmanagers/fluxbox/HISTORY
+++ b/windowmanagers/fluxbox/HISTORY
@@ -1,3 +1,6 @@
+2015-02-08 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.3.7
+
 2015-01-06 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.3.6
 	* DEPENDS: updated libxrandr, libxext flags; added freetype2 optional
