--- a/audio-players/mpd/HISTORY
+++ b/audio-players/mpd/HISTORY
@@ -1,3 +1,8 @@
+2015-02-09 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.19.9
+	* DEPENDS: added missing icu optional dependency
+	* CONFIGURE: remove obsolete oggflac options
+
 2015-02-01 Pavel Vinogradov <public@sourcemage.org>
 	* DETAILS: Fixed SOURCE_URL[0], removed BRANCH
 	  updated spell to 0.19.8
