--- a/utils/gti/HISTORY
+++ b/utils/gti/HISTORY
@@ -1,2 +1,5 @@
+2015-02-09 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 1.2.0
+
 2012-08-17 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS, DEPENDS, BUILD: spell created, version 1.0.3
