--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,3 +1,8 @@
+2015-02-09 Ladislav Hagara <hgr@vabo.cz>
+	* latest.defaults: LATEST_maintenance_patches_3=3.19, LATEST_3=3.19
+	* info/kernels/3.19: added
+	* info/patches/maintenance_patches_3/patch-3.19: added
+
 2015-02-07 Ladislav Hagara <hgr@vabo.cz>
 	* latest.defaults: LATEST_maintenance_patches_3=patch-3.18.6
 	* info/patches/maintenance_patches_3/patch-3.18.6: added
