--- a/graphics/feh/HISTORY
+++ b/graphics/feh/HISTORY
@@ -1,3 +1,7 @@
+2015-02-09 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.12
+	* DEPENDS: giblib removed
+
 2013-06-24 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.9.3
 
