samba: security+feature update (cherry picked from commit 48b46c4d452e09d21b0eeb5e13ca8764ba2d7f8b)
Conflicts:

	net/samba/HISTORY

--- a/net/samba/HISTORY
+++ b/net/samba/HISTORY
@@ -1,3 +1,10 @@
+2015-02-09 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: SECURITY_PATCH++
+	* PRE_BUILD: apply patches
+	* fsctl.patch: added, to fix CVE-2014-0178
+	* logs.patch: added, to fix log rotation for nmbd, backported official
+	  patch (a7df00c82049547129f063a40a842b156c8aead4)
+
 2014-06-23 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 3.6.24, SECURITY_PATCH=23, CVE-2014-0244 and CVE-2014-3493
 
