--- a/net/samba/HISTORY
+++ b/net/samba/HISTORY
@@ -1,3 +1,10 @@
+2015-02-09 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: SECURITY_PATCH++
+	* PRE_BUILD: apply patches
+	* fsctl.patch: added, to fix CVE-2014-0178
+	* logs.patch: added, to fix log rotation for nmbd, backported official
+	  patch (a7df00c82049547129f063a40a842b156c8aead4)
+
 2015-01-02 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: samba.org is on https://
 	* DEPENDS: HTTP_DL_HANDLER (default wget) needs SSL support
