--- a/http/seamonkey/HISTORY
+++ b/http/seamonkey/HISTORY
@@ -1,3 +1,6 @@
+2015-02-09 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.32.1
+
 2015-01-14 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.32; SECURITY_PATCH++
 
