--- a/utils/dbus/HISTORY
+++ b/utils/dbus/HISTORY
@@ -1,3 +1,6 @@
+2015-02-10 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 1.8.16, SECURITY_PATCH=15
+
 2015-01-21 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.8.14, SECURITY_PATCH=14
 
