--- a/gnome2-libs/glibmm/HISTORY
+++ b/gnome2-libs/glibmm/HISTORY
@@ -1,3 +1,6 @@
+2015-02-10 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.42.0
+
 2014-04-19Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.40.0
 
