--- a/graphics/imagemagick/HISTORY
+++ b/graphics/imagemagick/HISTORY
@@ -1,3 +1,6 @@
+2015-02-10 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 6.9.0-5
+
 2014-09-04 Remko van der Vossen <wich@sourcemage.org>
 	* DETAILS: version 6.8.9-7
 
