cryptsetup-luks: update to 1.6.6

--- a/crypto/cryptsetup-luks/HISTORY
+++ b/crypto/cryptsetup-luks/HISTORY
@@ -1,3 +1,11 @@
+2015-02-09 Thomas Orgis <sobukus@sourcemage.org>
+	* DETAILS: update to 1.6.6, from kernel.org now
+	  Hash is out of autosigned upstream file. Not using the upstream
+	  signature since it is pain without (much) gain to check the
+	  uncompressed tar.
+	  Note: This should be merged with cryptsetup spell again, as
+	  the -luks times are long gone.
+
 2013-01-15 Thomas Orgis <sobukus@sourcemage.org>
 	* BUILD: Use proper flag to get static cryptsetup,
 	  drop unnecessary second build dir.
