--- a/devel/bluefish/HISTORY
+++ b/devel/bluefish/HISTORY
@@ -1,3 +1,6 @@
+2015-02-11 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.2.7
+
 2014-04-22 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.2.6
 
