--- a/archive/p7zip/HISTORY
+++ b/archive/p7zip/HISTORY
@@ -1,3 +1,7 @@
+2015-02-11 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 9.38
+	* PRE_BUILD: quoting paths; sed -i -> sedit
+
 2014-06-20 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: fix SOURCE_URL[0]
 
