eudev: renamed provider UDEV -> DEVICE-MANAGER

--- a/disk/eudev/HISTORY
+++ b/disk/eudev/HISTORY
@@ -1,10 +1,15 @@
-22014-10-30 Treeve Jelbert <treeve@sourcemage.org>
+2015-02-11 Vlad Glagolev <stealth@sourcemage.org>
+	* PROVIDES: UDEV -> DEVICE-MANAGER, fixed the bug -- providers must
+	  not match spell names (the case doesn't matter here)
+	* REPAIR^2546e42efb97f0db2ee2d49b8bf5dfce^PROVIDES: added
+
+2014-10-30 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.1
 
-22014-09-01 Treeve Jelbert <treeve@sourcemage.org>
+2014-09-01 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.10
 
-22014-06-20 Treeve Jelbert <treeve@sourcemage.org>
+2014-06-20 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.8
 	* PRE_BUILD: create 'input' group
 
