udev: renamed provider UDEV -> DEVICE-MANAGER

--- a/disk/udev/HISTORY
+++ b/disk/udev/HISTORY
@@ -1,3 +1,9 @@
+2015-02-11 Vlad Glagolev <stealth@sourcemage.org>
+	* PROVIDES: UDEV -> DEVICE-MANAGER, fixed the bug -- providers must
+	  not match spell names (the case doesn't matter here); changed mode to
+	  755
+	* REPAIR^2546e42efb97f0db2ee2d49b8bf5dfce^PROVIDES: added
+
 2013-07-27 Treeve Jelbert <treeve@sourcemage.org>
 	* CONFLICTS: add eudev
 	* PROVIDES: added
