pulseaudio: depends on UDEV -> DEVICE-MANAGER

--- a/audio-drivers/pulseaudio/HISTORY
+++ b/audio-drivers/pulseaudio/HISTORY
@@ -1,6 +1,10 @@
-2014-08-19 Treeve Jelbert <treeve@sourcemage.org> 
+2015-02-11 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: UDEV -> DEVICE-MANAGER
+
+2014-08-19 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: openssl => SSL
-2014-06-09 Treeve Jelbert <treeve@sourcemage.org> 
+
+2014-06-09 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: 5.0
 	* DEPENDS: fix UDEV, gtk+2 => gtk+3, add fftw, remove hal, add orc
 	  gettedxt is nneded in order to build .desktop files
@@ -13,7 +17,7 @@
 	* DEPENDS: Replaced xorg-libs with libx11, libice, libsm, libxext, libxtst
 	  gtk+2 support also needs libxxf86vm
 
-2013-07-28 Treeve Jelbert <treeve@sourcemage.org> 
+2013-07-28 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: udev => UDEV
 
 2013-02-15 Sukneet Basuta <sukneet@sourcemage.org>
