libgpod: depends on UDEV -> DEVICE-MANAGER

--- a/audio-libs/libgpod/HISTORY
+++ b/audio-libs/libgpod/HISTORY
@@ -1,4 +1,7 @@
-2013-07-28 Treeve Jelbert <treeve@sourcemage.org> 
+2015-02-11 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: UDEV -> DEVICE-MANAGER
+
+2013-07-28 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: udev => UDEV
 
 2013-02-18 Remko van der Vossen <wich@sourcemage.org>
