pcsc-lite: depends on UDEV -> DEVICE-MANAGER

--- a/crypto/pcsc-lite/HISTORY
+++ b/crypto/pcsc-lite/HISTORY
@@ -1,7 +1,10 @@
-2013-07-28 Treeve Jelbert <treeve@sourcemage.org> 
+2015-02-11 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: UDEV -> DEVICE-MANAGER
+
+2013-07-28 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: udev => UDEV
 
-2012-05-09 Treeve Jelbert <treeve@sourcemage.org> 
+2012-05-09 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: libusb => LIBUSB
 
 2012-04-09 Ladislav Hagara <hgr@vabo.cz>
