--- a/disk/gparted/HISTORY
+++ b/disk/gparted/HISTORY
@@ -1,10 +1,13 @@
+2015-02-11 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: UDEV -> DEVICE-MANAGER
+
 2014-02-20 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.18.0
 
 2013-09-19 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.16.2
 
-2013-07-28 Treeve Jelbert <treeve@sourcemage.org> 
+2013-07-28 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: udev => UDEV
 
 2013-05-02 Ladislav Hagara <hgr@vabo.cz>
