libatasmart: depends on UDEV -> DEVICE-MANAGER

--- a/disk/libatasmart/HISTORY
+++ b/disk/libatasmart/HISTORY
@@ -1,3 +1,6 @@
+2015-02-11 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: UDEV -> DEVICE-MANAGER, changed mode to 755
+
 2013-10-21 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: added, for UDEV
 
