--- a/disk/udisks/HISTORY
+++ b/disk/udisks/HISTORY
@@ -1,3 +1,6 @@
+2015-02-11 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: UDEV -> DEVICE-MANAGER
+
 2014-02-12 Tommy Boatman <tboatman@sourcemage.org>
 	* DEPENDS: needs policykit regardless of gtk-doc
 	           needs dbus-glib
