--- a/disk/udisks2/HISTORY
+++ b/disk/udisks2/HISTORY
@@ -1,3 +1,6 @@
+2015-02-11 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: UDEV -> DEVICE-MANAGER
+
 2014-12-19 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: 2.1.4
 
