--- a/e-17/eeze/HISTORY
+++ b/e-17/eeze/HISTORY
@@ -1,3 +1,6 @@
+2015-02-11 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: UDEV -> DEVICE-MANAGER
+
 2013-07-30 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 1.7.8
 
