gvfs: depends on UDEV -> DEVICE-MANAGER

--- a/gnome2-libs/gvfs/HISTORY
+++ b/gnome2-libs/gvfs/HISTORY
@@ -1,7 +1,10 @@
+2015-02-11 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: UDEV -> DEVICE-MANAGER, fixed provider dependency check
+
 2015-01-25 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: updated spell to 1.23.4
 
-2013-07-28 Treeve Jelbert <treeve@sourcemage.org> 
+2013-07-28 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: udev => UDEV
 
 2013-05-09 Ladislav Hagara <hgr@vabo.cz>
