libgphoto2: depends on UDEV -> DEVICE-MANAGER

--- a/graphics/libgphoto2/HISTORY
+++ b/graphics/libgphoto2/HISTORY
@@ -1,3 +1,7 @@
+2015-02-11 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: UDEV -> DEVICE-MANAGER, corrected a typo in the variable for
+	  kernel version
+
 2015-01-04 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: Fix SOURCE_URL[0]
 
