--- a/libs/libusb/HISTORY
+++ b/libs/libusb/HISTORY
@@ -1,4 +1,7 @@
-2014-0615 Treeve Jelbert <treeve@sourcemage.org>
+2015-02-11 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: UDEV -> DEVICE-MANAGER
+
+2014-06-15 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.0.19
 
 2014-04-05 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
