libvirt: depends on UDEV -> DEVICE-MANAGER

--- a/libs/libvirt/HISTORY
+++ b/libs/libvirt/HISTORY
@@ -1,3 +1,6 @@
+2015-02-11 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: UDEV -> DEVICE-MANAGER; fixed xen dependency
+
 2014-12-29 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: Uses ebtables for firewall/NAT
 
