--- a/printer/system-config-printer/HISTORY
+++ b/printer/system-config-printer/HISTORY
@@ -1,3 +1,6 @@
+2015-02-11 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: UDEV -> DEVICE-MANAGER
+
 2013-07-28 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.4.1
 
