qtbase: depends on UDEV -> DEVICE-MANAGER

--- a/qt5/qtbase/HISTORY
+++ b/qt5/qtbase/HISTORY
@@ -1,7 +1,9 @@
+2015-02-11 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: UDEV -> DEVICE-MANAGER
+
 2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
-        * DEPENDS: openssl => SSL
-	  fix flage
-        * SUB_DEPENDS, PRE_SUB_DEPENDS: openssl => SSL
+	* DEPENDS: openssl => SSL, fix flags
+	* SUB_DEPENDS, PRE_SUB_DEPENDS: openssl => SSL
 
 2014-02-05 Tommy Boatman <tboatman@sourcemage.org>
 	* BUILD: removed demos to match CONFIGURE
