qtserialport: depends on UDEV -> DEVICE-MANAGER

--- a/qt5/qtserialport/HISTORY
+++ b/qt5/qtserialport/HISTORY
@@ -1,3 +1,7 @@
+2015-02-11 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: UDEV -> DEVICE-MANAGER
+	* CONFLICTS: changed mode to 755
+
 2013-12-12 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 5.2.0
 	  new spell, for modular qt5
