--- a/qt5/qtimageformats/HISTORY
+++ b/qt5/qtimageformats/HISTORY
@@ -1,3 +1,6 @@
+2015-02-11 Vlad Glagolev <stealth@sourcemage.org>
+	* CONFLICTS: changed mode to 755
+
 2013-12-12 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 5.2.0
 
