systemd: depends on UDEV -> DEVICE-MANAGER

--- a/smgl/systemd/HISTORY
+++ b/smgl/systemd/HISTORY
@@ -1,18 +1,21 @@
+2015-02-11 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: UDEV -> DEVICE-MANAGER
+
 2013-07-28 Treeve Jelbert <treeve@sourcemage.org> 
 	* DEPENDS: udev => UDEV
 
 2011-12-21 David Kowis <dkowis@shlrm.org>
-  * DETAILS: added more information to the long description and refomratted it
+	* DETAILS: added more information to the long description and reformatted it
 
 2011-12-20 David Kowis <dkowis@shlrm.org>
-  * DEPENDS: added additional dependencies
-  * CONFIGURE: added configure options
-  * BUILD: set the root directory correctly
-  * INSTALL: added logic to barf out one more config file that's needed
-  * UP_TRIGGERS: Set the triggers to fire only if we're doing a fresh install
+	* DEPENDS: added additional dependencies
+	* CONFIGURE: added configure options
+	* BUILD: set the root directory correctly
+	* INSTALL: added logic to barf out one more config file that's needed
+	* UP_TRIGGERS: Set the triggers to fire only if we're doing a fresh install
 
 2011-12-19 David Kowis <dkowis@shlrm.org>
-  * DEPENDS: needs intltool to successfully build
+	* DEPENDS: needs intltool to successfully build
 	* DETAILS: version to 37
 
 2011-06-13 David Kowis <dkowis@shlrm.org>
