bluez5: depends on UDEV -> DEVICE-MANAGER

--- a/utils/bluez5/HISTORY
+++ b/utils/bluez5/HISTORY
@@ -1,3 +1,6 @@
+2015-02-11 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: UDEV -> DEVICE-MANAGER
+
 2015-01-10 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 5.27
-	  spell creaaated, based on bluez
+	  spell created, based on bluez
