--- a/utils/xen/HISTORY
+++ b/utils/xen/HISTORY
@@ -1,3 +1,6 @@
+2015-02-11 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: UDEV -> DEVICE-MANAGER
+
 2014-09-03 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 4.2.5 (4.2); SECURITY_PATCH++
 	* DEPENDS: added missing yajl dependency
