guvcview: depends on UDEV -> DEVICE-MANAGER

--- a/video/guvcview/HISTORY
+++ b/video/guvcview/HISTORY
@@ -1,10 +1,13 @@
+2015-02-11 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: UDEV -> DEVICE-MANAGER
+
 2014-10-07 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.0.1
 
 2013-12-11 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.7.2
 
-2013-07-28 Treeve Jelbert <treeve@sourcemage.org> 
+2013-07-28 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: udev => UDEV
 
 2013-07-23 Ladislav Hagara <hgr@vabo.cz>
@@ -18,6 +21,7 @@
 
 2012-08-20 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.6.1
+
 2012-06-25 Vlad Glagolev <stealth@sourcemage.org>
 	* PRE_BUILD: apply the patch if uvcvideo.h (comes with kernel sources
 	  > 3.0) isn't found
