--- a/video/kino/HISTORY
+++ b/video/kino/HISTORY
@@ -1,4 +1,7 @@
-2013-07-28 Treeve Jelbert <treeve@sourcemage.org> 
+2015-02-11 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: UDEV -> DEVICE-MANAGER
+
+2013-07-28 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: udev => UDEV
 
 2011-07-30 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
