vlc: depends on UDEV -> DEVICE-MANAGER

--- a/video/vlc/HISTORY
+++ b/video/vlc/HISTORY
@@ -1,3 +1,6 @@
+2015-02-11 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: UDEV -> DEVICE-MANAGER
+
 2014-08-01 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.1.5
 	* DEPENDS: -opengl option removed, does not exist
