--- a/wm-addons/razor-qt/HISTORY
+++ b/wm-addons/razor-qt/HISTORY
@@ -1,4 +1,7 @@
-2013-07-28 Treeve Jelbert <treeve@sourcemage.org> 
+2015-02-11 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: UDEV -> DEVICE-MANAGER
+
+2013-07-28 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: udev => UDEV
 
 2012-10-25 Ladislav Hagara <hgr@vabo.cz>
