--- a/xorg-xserver/xorg-server/HISTORY
+++ b/xorg-xserver/xorg-server/HISTORY
@@ -1,9 +1,11 @@
-2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
-        * DEPENDS: openssl => SSL
+2015-02-11 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: UDEV -> DEVICE-MANAGER
 
-        * SUB_DEPENDS, PRE_SUB_DEPENDS: openssl => SSL
+2014-08-19 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: openssl => SSL
+	* SUB_DEPENDS, PRE_SUB_DEPENDS: openssl => SSL
 
-2014-04-14  Treeve Jelbert <treeve@sourcemage.org>
+2014-04-14 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: mesalib => MESALIB
 
 2013-07-28 Treeve Jelbert <treeve@sourcemage.org> 
