lynx: fixed build with default CFLAGS

--- a/http/lynx/HISTORY
+++ b/http/lynx/HISTORY
@@ -1,3 +1,7 @@
+2015-02-11 Vlad Glagolev <stealth@sourcemage.org>
+	* PRE_BUILD: added, to apply the patch
+	* locale.patch: fixed build with default CFLAGS
+
 2012-05-15 Vlad Glagolev <stealth@sourcemage.org>
 	* DEPENDS: added more dependencies
 	* BUILD: use LYNX_OPTS
