lvm: fixed build with readline 6.3

--- a/disk/lvm/HISTORY
+++ b/disk/lvm/HISTORY
@@ -1,3 +1,7 @@
+2015-02-12 Vlad Glagolev <stealth@sourcemage.org>
+	* PRE_BUILD: added, apply the patch
+	* readline63.patch: added, to fix build with readline 6.3
+
 2012-02-21 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.02.92
 
