libtomcrypt: new spell, modular and portable cryptographic toolkit

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2015-02-12 Ismael Luceno <ismael@sourcemage.org>
+	* libs/libtomcrypt: new spell, modular and portable cryptographic
+	  toolkit
+
 2015-02-05 Vlad Glagolev <stealth@sourcemage.org>
 	* accounts, groups: added account data for rpcbind spell
 
