--- a/disk/reiser4progs/HISTORY
+++ b/disk/reiser4progs/HISTORY
@@ -1,3 +1,9 @@
+2015-02-12 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: added missing optional dependency -- readline
+	* BUILD: cleaned up
+	* PRE_BUILD: added, to apply the patch
+	* readline63.patch: added, to fix build with readline 6.3
+
 2011-10-14 Bor Kraljič <pyrobor@ver.si>
 	* DETAILS: fixed long description wrap (scripted)
 
