--- a/graphics-libs/harfbuzz/HISTORY
+++ b/graphics-libs/harfbuzz/HISTORY
@@ -1,3 +1,6 @@
+2015-02-12 Eric Sandall <sandalle@sourcemage.org>
+	* PRE_SUB_DEPENDS: Fix syntax error and in REPAIR file
+
 2015-01-31 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.9.38
 
