--- a/graphics/inkscape/HISTORY
+++ b/graphics/inkscape/HISTORY
@@ -1,3 +1,6 @@
+2015-02-12 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 0.91, SOURCE_URL[0] updated
+
 2014-08-14 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 0.48.5
 
