http/webkitgtk: version 2.4.8, SECURITY_PATCH++

--- a/http/webkitgtk/HISTORY
+++ b/http/webkitgtk/HISTORY
@@ -1,3 +1,8 @@
+2015-02-12 Pavel Vinogradov <public@sourcemage.org>
+	* DETAILS: version 2.4.8, SECURITY_PATCH++, (CVE-2014-1344),
+	  (CVE-2014-1384), (CVE-2014-1385), (CVE-2014-1387), (CVE-2014-1388),
+	  (CVE-2014-1389), (CVE-2014-1390)
+
 2014-10-23 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: version 2.4.7
 
