--- a/http/webkitgtk3/HISTORY
+++ b/http/webkitgtk3/HISTORY
@@ -1,3 +1,6 @@
+2015-02-12 Pavel Vinogradov <public@sourcemage.org>
+	* DETAILS: version 2.6.5
+
 2014-10-23 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: version 2.6.2
 
