graphics-libs/libvisio: added dependencies on boost, icu and librevenge

--- a/graphics-libs/libvisio/HISTORY
+++ b/graphics-libs/libvisio/HISTORY
@@ -1,3 +1,6 @@
+2015-02-12 Pavel Vinogradov <public@sourcemage.org>
+	* DEPENDS: added boost, icu and librevenge
+
 2015-01-29 Pavel Vinogradov <public@sourcemage.org>
 	* DETAILS: Fixed SOURCE_URL[0],
 	  updated spell to 0.1.1
