--- a/audio-soft/qjackctl/HISTORY
+++ b/audio-soft/qjackctl/HISTORY
@@ -1,3 +1,8 @@
+2015-02-13 Thomas Orgis <sobukus@sourcemage.org>
+	* PRE_BUILD: Hack configure to not override PATH by prepending
+	  /usr/bin and /usr/local/bin, which is redundant anyway and
+	  makes it pick up the wrong qmake.
+
 2014-07-03 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: Use get_scm_version
 
