--- a/audio-drivers/libffado/HISTORY
+++ b/audio-drivers/libffado/HISTORY
@@ -1,3 +1,6 @@
+2015-02-13 Thomas Orgis <sobukus@sourcemage.org>
+	* DETAILS: version 2.2.1
+
 2014-08-24 Thomas Orgis <sobukus@sourcemage.org>
 	* DEPENDS: libconfig
 
