vche: new spell, hex editor

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2015-02-13 Ismael Luceno <ismael@sourcemage.org>
+	* editors/vche: new spell, hex editor
+
 2015-02-12 Ismael Luceno <ismael@sourcemage.org>
 	* libs/libtomcrypt: new spell, modular and portable cryptographic
 	  toolkit
