--- a/libs/dotconf/HISTORY
+++ b/libs/dotconf/HISTORY
@@ -1,3 +1,8 @@
+2015-02-14 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: new website & url, version master
+	  project is basically dead but the git archive is newer than the previous version
+	* PRE_BUILD: added
+
 2006-10-03 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed UPDATED.
 
