--- a/audio-soft/speech-dispatcher/HISTORY
+++ b/audio-soft/speech-dispatcher/HISTORY
@@ -1,3 +1,7 @@
+2015-02-14 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS version 0.8.1
+	* DEPENDS: add libsndfile, python3, libao
+
 2011-05-07 Bor Kraljič <pyrobor@ver.si>
 	* DETAILS: updated spell to 0.7.1
 	* gcc43.patch, PRE_BUILD: removed, no longer needed
