--- a/shell-term-fm/shared-mime-info/HISTORY
+++ b/shell-term-fm/shared-mime-info/HISTORY
@@ -1,3 +1,6 @@
+2015-02-14 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.4
+
 2014-05-26 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.3
 
