--- a/xorg-lib/wayland/HISTORY
+++ b/xorg-lib/wayland/HISTORY
@@ -1,3 +1,6 @@
+2015-02-14 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.7.0
+
 2015-01-24 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.6.1
 
