--- a/xorg-app/weston/HISTORY
+++ b/xorg-app/weston/HISTORY
@@ -1,3 +1,7 @@
+2015-02-14 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.7.0
+	* DEPENDS: UDEV => DEVICE-MANAGER
+
 2015-01-249 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.6.1
 
