--- a/disk/partclone/HISTORY
+++ b/disk/partclone/HISTORY
@@ -1,3 +1,6 @@
+2015-02-15 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.2.76
+
 2015-01-06 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.2.75
 	* DEPENDS: xfsprogs, btrfs-progs, jfsutils
