--- a/devel/cmake/HISTORY
+++ b/devel/cmake/HISTORY
@@ -1,3 +1,6 @@
+2015-02-15 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.1.3
+
 2015-01-24 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.1.1
 
