basesystem: fix force depends bug for wget on 'sorcery rebuild'
(cherry picked from commit 9d79d0c6a73af7a23ca0491e0d263b57e12ef9d1)

--- a/smgl/basesystem/HISTORY
+++ b/smgl/basesystem/HISTORY
@@ -1,3 +1,8 @@
+2015-02-16 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: use FORCE_BASESYSTEM_DEPENDS check for wget to avoid the bug
+	  about missing dependency flags on `sorcery -r` because of several
+	  cast_self entries in TRIGGERS
+
 2012-05-23 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.9.6
 	* DEPENDS: module-init-tools => MODTOOLS
