--- a/smgl/basesystem/HISTORY
+++ b/smgl/basesystem/HISTORY
@@ -1,3 +1,8 @@
+2015-02-16 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: use FORCE_BASESYSTEM_DEPENDS check for wget to avoid the bug
+	  about missing dependency flags on `sorcery -r` because of several
+	  cast_self entries in TRIGGERS
+
 2012-05-13 Vlad Glagolev <stealth@sourcemage.org>
 	* DEPENDS: added xz-utils as a required dependency, since stable sorcery
 	  handles xz archives out of the box
