--- a/devel/libtool/HISTORY
+++ b/devel/libtool/HISTORY
@@ -1,3 +1,6 @@
+2015-02-16 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.4.6
+
 2014-11-30 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.4.4
 
