--- a/science-libs/eigen3/HISTORY
+++ b/science-libs/eigen3/HISTORY
@@ -1,3 +1,6 @@
+2015-02-16 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.2.4
+
 2014-02-27 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.2.1
 
