smgl/simpleinit-msb: conflicts with epoch

--- a/smgl/simpleinit-msb/HISTORY
+++ b/smgl/simpleinit-msb/HISTORY
@@ -1,3 +1,6 @@
+2015-02-17 Pavel Vinogradov <public@sourcemage.org>
+	* CONFLICTS: added epoch
+
 2014-06-25 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: PATCHLEVEL=1
 	* PRE_BUILD: apply patch
