smgl/initng: added CONFLICTS

--- a/smgl/initng/HISTORY
+++ b/smgl/initng/HISTORY
@@ -1,3 +1,6 @@
+2015-02-17 Pavel Vinogradov <public@sourcemage.org>
+	* CONFLICTS: added
+
 2007-12-05 Elisamuel Resto <ryuji@sourcemage.org>
 	* BUILD: use cmake_build from FUNCTIONS
 
