smgl/upstart: conflicts with epoch

--- a/smgl/upstart/HISTORY
+++ b/smgl/upstart/HISTORY
@@ -1,3 +1,6 @@
+2015-02-17 Pavel Vinogradov <public@sourcemage.org>
+	* CONFLICTS: added epoch
+
 2012-01-17 Arjan Bouter <abouter@sourcemage.org>
 	* DETAILS: version 1.4
 	* PRE_BUILD: fixed removal of sysv-compat jobs
