--- a/python-pypi/mako/HISTORY
+++ b/python-pypi/mako/HISTORY
@@ -1,3 +1,6 @@
+2015-02-17 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.0.1
+
 2013-04-16 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.8.0
 	* DEPENDS: fix python3 usage
