--- a/video/mlt/HISTORY
+++ b/video/mlt/HISTORY
@@ -1,3 +1,9 @@
+2015-02-17 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.9.4
+	* DEPENDS, BUILD: add qt4/qt5 support
+	* BUILD: gpl3 support
+	* DEPNDS: add libexif
+
 2014-07-03 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: Use get_scm_version
 
