--- a/x11-toolkits/fox/HISTORY
+++ b/x11-toolkits/fox/HISTORY
@@ -1,3 +1,6 @@
+2015-02-17 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 1.6.50, 1.7.50
+
 2013-05-10 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.6.49 (stable)
 	* PREPARE: readability++
