removed typos in ChangeLog and epoch's HISTORY

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,5 @@
 2015-02-17 Pavel Vinogradov <public@sourcemage.org>
-	*~smgl/epoch: new spell, The Epoch Init System
+	* smgl/epoch: new spell, The Epoch Init System
 
 2015-02-13 Ismael Luceno <ismael@sourcemage.org>
 	* editors/vche: new spell, hex editor
