--- a/smgl/epoch/HISTORY
+++ b/smgl/epoch/HISTORY
@@ -1,3 +1,3 @@
 2015-02-17 Pavel Vinogradov <public@sourcemage.org>
-	*~BUILD, CONFLICTS, DEPENDS, DETAILS, epoch.conf, INSTALL,
+	* BUILD, CONFLICTS, DEPENDS, DETAILS, epoch.conf, INSTALL,
 	  PROVIDES, scripts/*: spell created
