chat-im/pidgin-libnotify: added fix to build against current libnotify

--- a/chat-im/pidgin-libnotify/HISTORY
+++ b/chat-im/pidgin-libnotify/HISTORY
@@ -1,3 +1,6 @@
+2015-02-18 Pavel Vinogradov <public@sourcemage.org>
+	* PRE_BUILD: added to fix building with current libnotify
+
 2009-08-15 Finn Haedicke <finn_haedicke@gmx.net>
 	* DEPENDS, DETAILS: spell created
 
