php: => 5.4.38 [security] (cherry picked from commit e6fb738df3fd36cdb87caf3d2ac19af5e5d3a63c)

--- a/php-pear/php/HISTORY
+++ b/php-pear/php/HISTORY
@@ -1,3 +1,7 @@
+2015-02-20 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 5.4.38 (stable); SECURITY_PATCH++
+	  (CVE-2015-0235, CVE-2015-0273)
+
 2015-01-24 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 5.4.37 (stable); SECURITY_PATCH++
 	  (CVE-2015-0231, CVE-2014-9427, CVE-2015-0232)
