--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2015-02-20 Treeve Jelbert <treeve@sourcemage.org>
+	* devel/kdtree: library for using kd-trees
+
 2015-02-13 Ismael Luceno <ismael@sourcemage.org>
 	* editors/vche: new spell, hex editor
 
