Revert "libxml2 - tweak build for python3"
This reverts commit c0ee14fe8afdf9f035aad59547a2384719294a12.

Conflicts:

	ChangeLog
(cherry picked from commit 7b023bd603824bf5113d9c006ad7bd11b51f425d)

--- a/ChangeLog
+++ b/ChangeLog
@@ -689,7 +689,7 @@
 	* net/cgminer: new spell, multi-threaded multi-pool FPGA and ASIC miner for bitcoin
 
 2013-11-20 Treeve Jelbert <treeve@sourcemage.org>
-	* FUNCTIONS,python-pypi/PY_DEPENDS: fix builds involving python3.3
+	* FUNCTIONS: fix builds involving python3.3
 
 2013-11-20 Vlad Glagolev <stealth@sourcemage.org>
 	* loop-AES.gpg: added 8132F189 public key (Jari Ruusu (2013)
