jfsutils: fixed build with recent glibc

--- a/disk/jfsutils/HISTORY
+++ b/disk/jfsutils/HISTORY
@@ -1,3 +1,7 @@
+2015-02-21 Vlad Glagolev <stealth@sourcemage.org>
+	* PRE_BUILD: added, apply patch
+	* inttypes.patch: added, to fix build with recent glibc
+
 2012-02-04 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: PATCHLEVEL=1; quoting paths
 	* BUILD: added, all *fsck* stuff must go into /sbin
