sysstat: fixed syntax errors in INSTALL (cherry picked from commit bbe844e826c638ef47e2bb270f722810ef80f32c)

--- a/utils/sysstat/HISTORY
+++ b/utils/sysstat/HISTORY
@@ -1,3 +1,6 @@
+2015-02-21 Vlad Glagolev <stealth@sourcemage.org>
+	* INSTALL: corrected syntax errors; verbosity++
+
 2013-06-13 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: PATCHLEVEL++
 	* CONFIGURE: Query about installing cron jobs.
