--- a/utils/sysstat/INSTALL
+++ b/utils/sysstat/INSTALL
@@ -1,16 +1,17 @@
 default_install &&
 
 if [[ "x${SYSSTAT_CRON}" == "xy" ]]; then
-  if ! -d "${INSTALL_ROOT}"/etc/cron.hourly; then
-    install -d -m 0755 "${INSTALL_ROOT}"/etc/cron.hourly
+  if [[ ! -d "${INSTALL_ROOT}"/etc/cron.hourly ]]; then
+    install -d -vm 0755 "${INSTALL_ROOT}"/etc/cron.hourly
   fi  &&
 
-  if ! -d "${INSTALL_ROOT}"/etc/cron.daily; then
-    install -d -m 0755 "${INSTALL_ROOT}"/etc/cron.daily
+  if [[ ! -d "${INSTALL_ROOT}"/etc/cron.daily ]]; then
+    install -d -vm 0755 "${INSTALL_ROOT}"/etc/cron.daily
   fi  &&
 
-  install -m 0755  "${SPELL_DIRECTORY}"/cron.hourly/sa1  \
-    "${INSTALL_ROOT}"/etc/cron.hourly/sa1  &&
-  install -m 0755  "${SPELL_DIRECTORY}"/cron.daily/sa2  \
-    "${INSTALL_ROOT}"/etc/cron.daily/sa2
+  install -vm 0755 "${SPELL_DIRECTORY}"/cron.hourly/sa1 \
+                   "${INSTALL_ROOT}"/etc/cron.hourly/sa1 &&
+
+  install -vm 0755 "${SPELL_DIRECTORY}"/cron.daily/sa2 \
+                   "${INSTALL_ROOT}"/etc/cron.daily/sa2
 fi
