--- a/security/shadow/HISTORY
+++ b/security/shadow/HISTORY
@@ -1,3 +1,9 @@
+2015-02-21 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: SECURITY_PATCH++; quoting paths
+	* DEPENDS: dropped tabs
+	* BUILD: moved all pre-configuration actions to PRE_BUILD; readability++
+	* PRE_BUILD: use secure default values actually
+
 2012-06-30 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 4.1.5.1
 	* PRE_BUILD, copydir.c.patch: patch removed
