--- a/editors/vim/HISTORY
+++ b/editors/vim/HISTORY
@@ -1,3 +1,6 @@
+2015-02-22 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 7.4.640
+
 2014-07-03 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: Use get_scm_version
 
