video/mpv: version 0.8.0

--- a/video/mpv/HISTORY
+++ b/video/mpv/HISTORY
@@ -1,3 +1,7 @@
+2015-02-22 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 0.8.0, waf version 1.8.6
+	* DEPENDS: remove optional dependency on portaudio19
+
 2015-01-20 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: added waf 1.8.5 as SOURCE2
 	* DOWNLOAD: removed, waf is downloaded by DETAILS
