--- a/shell-term-fm/rxvt-unicode/HISTORY
+++ b/shell-term-fm/rxvt-unicode/HISTORY
@@ -1,3 +1,6 @@
+2015-02-22 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 9.21
+
 2014-09-25 Remko van der Vossen <wich@sourcemage.org>
 	* CONFIGURE: clarify what extended ISO 14755 modes means
 
