--- a/shell-term-fm/zsh/HISTORY
+++ b/shell-term-fm/zsh/HISTORY
@@ -1,3 +1,6 @@
+2015-02-22 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 5.0.7
+
 2014-05-29 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS: add optional dependency on gdbm
 	* BUILD: make_normal after default_build
