graphics/darktable: version 1.6.2

--- a/graphics/darktable/HISTORY
+++ b/graphics/darktable/HISTORY
@@ -1,3 +1,6 @@
+2015-02-22 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 1.6.2
+
 2014-07-03 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: Use get_scm_version
 
