--- a/printer/cups/HISTORY
+++ b/printer/cups/HISTORY
@@ -1,3 +1,7 @@
+2015-02-22 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.0.2
+	  SECURITY_PATCH++
+	 
 2014-11-19 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.0.1
 	* DEPENDS: add optional avahi
