http/firefox: remove -s from LDFLAGS

--- a/http/firefox/HISTORY
+++ b/http/firefox/HISTORY
@@ -1,3 +1,6 @@
+2015-02-22 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* BUILD: remove -s from LDFLAGS to prevent build error
+
 2015-01-26 Pavel Vinogradov <public@sourcemage.org>
 	* DETAILS: updated spell to 35.0.1
 
