btrfs-progs: => 3.18.2 (cherry picked from commit 629339bdb357c243182fb580b436c1909b0df063)

--- a/disk/btrfs-progs/HISTORY
+++ b/disk/btrfs-progs/HISTORY
@@ -1,3 +1,13 @@
+2015-02-23 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 3.18.2, use our own tarball checked out
+	  from git://git.kernel.org/pub/scm/linux/kernel/git/mason/btrfs-progs.git
+	  (tag v3.18.2), signed by me; quoting paths
+	* DEPENDS: rewritten proper dependency tree
+	* PREPARE: use release by default
+	* PRE_BUILD: added, to handle btrfs-convert
+	* BUILD, INSTALL: handle docless installation; /bin -> /sbin;
+	  verbosity++
+
 2015-01-22 Ismael Luceno <ismael@sourcemage.org>
 	* DEPENDS: Depends on xmlto & docbook-xsl for manpages
 
