--- a/disk/btrfs-progs/INSTALL
+++ b/disk/btrfs-progs/INSTALL
@@ -1,1 +1,5 @@
-make DESTDIR="$INSTALL_ROOT" prefix=/usr bindir=/bin install
+if is_depends_enabled $SPELL xmlto; then
+  make DESTDIR="$INSTALL_ROOT" prefix=/usr bindir=/sbin install
+else
+  make DISABLE_DOCUMENTATION=1 DESTDIR="$INSTALL_ROOT" prefix=/usr bindir=/sbin install
+fi
