--- a/printer/cups-filters/HISTORY
+++ b/printer/cups-filters/HISTORY
@@ -1,4 +1,7 @@
-2015-01-173 Treeve Jelbert <treeve@sourcemage.org>
+2015-02-22 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.0.65
+
+2015-01-17 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.0.62
 
 2014-11-03 Treeve Jelbert <treeve@sourcemage.org>
