--- a/devel/gdb/HISTORY
+++ b/devel/gdb/HISTORY
@@ -1,3 +1,6 @@
+2015-02-23 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 7.9
+
 2014-10-30 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 7.8.1
 
