--- a/disk/nilfs-utils/HISTORY
+++ b/disk/nilfs-utils/HISTORY
@@ -1,3 +1,8 @@
+2015-02-23 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.2.3; updated website; quoting paths; added
+	  more docs
+	* DEPENDS: added, for missing dependencies
+
 2012-07-08 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.1.4
 
