--- a/crypto/gnupg-exp/HISTORY
+++ b/crypto/gnupg-exp/HISTORY
@@ -1,3 +1,6 @@
+2015-02-23 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.0.27
+
 2014-11=-8 Treeve Jelbert <treeve@sourcemage.org>
 	* CONFLICST, PROVIDES: added
 
