samba: => 3.6.25 [security] (cherry picked from commit f7e3a04ecfe80cf7c53d0e0a5809ea468d60afa4)
Conflicts:

	net/samba/DETAILS

--- a/net/samba/HISTORY
+++ b/net/samba/HISTORY
@@ -1,3 +1,9 @@
+2015-02-23 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 3.6.25; SECURITY_PATCH++ (CVE-2015-0240);
+	  updated source url; removed broken mirrors; quoting paths
+	* CONFIGURE: fixed a typo
+	* fsctl.patch: removed, fixed by upstream
+
 2015-02-09 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: SECURITY_PATCH++
 	* PRE_BUILD: apply patches
