--- a/xorg-lib/libinput/HISTORY
+++ b/xorg-lib/libinput/HISTORY
@@ -1,3 +1,6 @@
+2015-02-24 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.11.0
+
 2015-02-07 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.10.0
 
