mpg123: bump to 1.22.0

--- a/audio-players/mpg123/HISTORY
+++ b/audio-players/mpg123/HISTORY
@@ -1,3 +1,6 @@
+2015-02-24 Thomas Orgis <sobukus@sourcemage.org>
+	* DETAILS: update to 1.22.0
+
 2015-01-11 Ismael Luceno <ismael@sourcemage.org>
 	* DEPENDS: Fix depends: openal -> OPENAL
 
