--- a/xorg-lib/libxxf86vm/HISTORY
+++ b/xorg-lib/libxxf86vm/HISTORY
@@ -1,3 +1,6 @@
+2015-02-24 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.1.4
+
 2014-09-25 Remko van der Vossen <wich@sourcemage.org>
 	* DEPENDS: missing depends
 
