--- a/libs/nspr/HISTORY
+++ b/libs/nspr/HISTORY
@@ -1,3 +1,6 @@
+2015-02-24 Pavel Vinogradov <public@sourcemage.org>
+	* DETAILS: 4.10.8
+
 2014-10-23 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 4.10.7; use spell variable in source url
 	* DEPENDS: corrected c++ flag
