crypto/nss: version 3.17.4

--- a/crypto/nss/HISTORY
+++ b/crypto/nss/HISTORY
@@ -1,3 +1,6 @@
+2015-02-24 Pavel Vinogradov <public@sourcemage.org>
+	* DETAILS: version 3.17.4
+
 2014-12-01 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: version 3.17.3, SECURITY_PATCH++
 
