http/firefox: version 36.0, SECURITY_PATCH++

--- a/http/firefox/HISTORY
+++ b/http/firefox/HISTORY
@@ -1,3 +1,7 @@
+2015-02-24 Pavel Vinogradov <public@sourcemage.org>
+	* DETAILS: version 36.0, SECURITY_PATCH++
+	* BUILD: corrected removal of -s from LDFLAGS
+
 2015-02-22 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* BUILD: remove -s from LDFLAGS to prevent build error
 
